# ollama-sgpt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: test.yml
ollama-sgpt/: README.md  pyproject.toml
ollama-sgpt/docs/: roadmap.md
ollama-sgpt/ollama_sgpt/: cli.py  config.py  exceptions.py  history.py  ollama_client.py  roles.py
tests/: conftest.py
tests/unit/: test_config.py  test_exceptions.py  test_history.py  test_ollama_client.py  test_roles.py
